--- a/css/nintendo.css
+++ b/css/nintendo.css
@@ -10,9 +10,9 @@
 
 
 body {
-    background: linear-gradient(#200016, #10001f);
+    background: #200016;
     height: 100vh;
-  
+    
 font-family: Valorax;
 }
 
@@ -20,6 +20,7 @@ a {
     text-decoration: none;
     color: white;
 }
+
 
 header {
     position: fixed;
@@ -67,102 +68,107 @@ header .logo {
     z-index: 999;
     display: none;
     }
-   
     .princip_ul li:hover ul.dropdown {
-    display: block;
-
+        display: block;
+    
+        }
+       
+        .princip_ul ul li a:hover,
+    .active {
+        display: block;
+    
+        background: #67034441;
+        color: #3C084F;
     }
-   
-    .princip_ul ul li a:hover,
-.active {
-    display: block;
-
-    background: #67034441;
-    color: #3C084F;
-}
-
-header ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-}
 
 
-.main {
-    position: relative;
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
+    .logo {
+        padding-top: 30px;
+        height: 200px;
     
-
-}
-
-.main::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    height: 100px;
-    width: 100%;
-    background: linear-gradient(to top, #200016, transparent)
-}
-
-.main img {
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-}
-
-#moon {
-    mix-blend-mode: screen;
-    transform: translateY(80px);
-
-}
-
-#mario{
-    object-fit:scale-down;
-    top: 17%;
-
-}
-
-.retro {
-    color: white;
-    font-size: 25px;
-    text-transform: uppercase;
-    transform: translateY(-140px);
-}
-.slogen{
+    }
     
-    color: white;
-   
-    font-size: 25px;
-    text-transform: uppercase;
-    transform: translateY(-140px);
-}
+    .logo1 {
+        z-index: 5;
+        position: absolute;
+        top: 0;
+        height: 100px;
+    }
+    
+    .section1 {
+    
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 730px;
+        width: 99.5%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        border-top: solid 3px #13d2d2;
+        border-right: solid 3px #13d2d2;
+        border-left: solid 3px #13d2d2;
+        
+    }
+    
+    .carousel {
+        margin-top: 200px;
+        position: relative;
+        width: 300px;
+        height: 200px;
+        transform-style: preserve-3d;
+        transform: perspective(1900px) rotateY(0deg);
+        animation: rotate 60s linear infinite;
+        justify-content: center;
+        display: flex;
+    
+    }
+    
+    .carousel__item {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        transform-origin: center;
+        transform-style: preserve-3d;
+    
+        transform: rotateY(calc(var(--i) * 90deg)) translateZ(400px);
+    }
+    
+    .les_img {
+        border: 3px ridge rgb(168, 9, 150);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: contain repeat no-repeat;
+        border-radius: 24px;
+        cursor: pointer;
+    }
+    
+    .les_img:hover {
+     -moz-transform: scale(1.1);
+    }
+    
+    .section2 {
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        margin-top: 50px;
+        height: 100%;
+    }
+    
+    button {
+        color: aqua;
+        cursor: pointer;
+        padding: 20px 50px 20px 50px;
+        background-color: rgba(240, 46, 170, 0.2);
+        color: aqua;
+        border-radius: 24px;
+        justify-content: center;
+        border: rgb(255, 0, 162) 3px solid;
+        box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px;
+        margin-bottom: 50px;
+    }
 
-.content {
-    display: flex   ;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color: white;
-    padding: 30px;
-}
-
-.content h2 {
-    margin: 20px;
-    font-size: 30px;
-}
-#footer_retro{
-    color: white;
-    font-size: 15px;
-}
-
-.site-footer
+    .site-footer
 {
   background-color:transparent;
   padding:10px 0 20px;
@@ -327,4 +333,37 @@ header ul {
     margin-right:0;
     font-weight:600
   }
+}
+    
+@keyframes rotate {
+    100% {
+        transform: perspective(1100px) rotateY(360deg);
+    }
+}
+
+@media screen and (max-width: 965px) {
+    .section1 {
+        height: 500px;
+        width: 98.9%;
+
+        border: solid 3px #051C24;
+    }
+
+    .carousel {
+
+        position: relative;
+        width: 150px;
+        height: 100px;
+        transform: perspective(1080px) rotateY(0deg);
+        animation: rotate 60s linear infinite;
+
+    }
+
+    .carousel__item {
+
+
+        transform: rotateY(calc(var(--i) * 45deg)) translateZ(210px);
+    }
+
+  
 }
