--- a/css/nintendo.css
+++ b/css/nintendo.css
@@ -10,7 +10,7 @@
 
 
 body {
-    background: #200016;
+    background: linear-gradient( to top ,#200016, #3a363e);
     height: 100vh;
     
 font-family: Valorax;
@@ -82,19 +82,7 @@ header .logo {
     }
 
 
-    .logo {
-        padding-top: 30px;
-        height: 200px;
-    
-    }
-    
-    .logo1 {
-        z-index: 5;
-        position: absolute;
-        top: 0;
-        height: 100px;
-    }
-    
+   
     .section1 {
     
         display: flex;
@@ -104,9 +92,7 @@ header .logo {
         width: 99.5%;
         background-size: cover;
         background-repeat: no-repeat;
-        border-top: solid 3px #13d2d2;
-        border-right: solid 3px #13d2d2;
-        border-left: solid 3px #13d2d2;
+       
         
     }
     
@@ -142,11 +128,7 @@ header .logo {
         border-radius: 24px;
         cursor: pointer;
     }
-    
-    .les_img:hover {
-     -moz-transform: scale(1.1);
-    }
-    
+   
     .section2 {
         justify-content: center;
         align-items: center;
@@ -170,7 +152,7 @@ header .logo {
 
     .site-footer
 {
-  background-color:transparent;
+  background:linear-gradient( to bottom ,#200016, #3a363e);
   padding:10px 0 20px;
   
   font-size:15px;
@@ -182,10 +164,7 @@ header .logo {
 
 }
 
-.site-footer hr.small
-{
-  margin:20px 0
-}
+
 .site-footer h6
 {
   color:#fff;
@@ -238,6 +217,12 @@ header .logo {
   margin-right:0;
   border-radius:100%;
   background-color:#33353d
+}
+#footer_retro{
+    color: white;
+}
+#footer_retro:hover{
+    color: #be1ec6;
 }
 .copyright-text
 {
