--- a/css/console2.css
+++ b/css/console2.css
@@ -1,8 +1,3 @@
-html, body{
-    height:  100%;
-    margin: 0;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
 
 #container{
     display: grid;
@@ -10,7 +5,12 @@ html, body{
     grid-template-columns: repeat(5, 1fr);
     height: inherit;
     margin: 0;
+
     
+}
+footer{
+    grid-column: 1/span 5;
+    grid-row: 5/6;
 }
 
 figcaption{
@@ -36,6 +36,15 @@ figcaption{
     height: 400px;
     width: 250px;
     background: linear-gradient(#041964, #3C084F, #041964 );
+    border-radius: 10px;
+    position: absolute;
+    z-index: -1;
+}
+
+.link{
+    height: 400px;
+    width: 250px;
+    background: linear-gradient(#e7b911, #87af04, #02081d );
     border-radius: 10px;
     position: absolute;
     z-index: -1;
@@ -97,7 +106,7 @@ h1{
     border-bottom: 2px solid black;
     padding-top: 10px;
     padding-bottom: 10px;
-    width: 90%; 
+    width: 100%; 
 }
 
 #xbox{
@@ -105,14 +114,27 @@ h1{
     display: flex;
     align-items: end;
     justify-self: flex-end;
-    width: 80%;
-    padding: 25px;
+    width: 90%;
+    padding-bottom: 5px;
 }
 #console{
-    width: 65%;
+    width: 100%;
     grid-area: 1/4/2/5;
     display: flex;
     justify-self: center;
     padding: 25px;
+    border-radius: 50%;
+    
+}
 
+@media screen and (max-width : 748px){
+    #container{
+    display: grid;
+    grid-template-columns: 1fr;
+    height: inherit;
+    margin: 0;
+    grid-auto-rows: auto;
+    
+}
+    
 }
