--- a/css/console3.css
+++ b/css/console3.css
@@ -35,7 +35,16 @@ figcaption{
 .bordure{
     height: 400px;
     width: 250px;
-    background: linear-gradient(#041964, #3C084F, #041964 );
+    background: linear-gradient(#010e3c, #3a034e, #010928 );
+    border-radius: 10px;
+    position: absolute;
+    z-index: -1;
+}
+
+.link{
+    height: 400px;
+    width: 250px;
+    background: linear-gradient(#e7b911, #87af04, #02081d );
     border-radius: 10px;
     position: absolute;
     z-index: -1;
@@ -97,7 +106,7 @@ h1{
     border-bottom: 2px solid black;
     padding-top: 10px;
     padding-bottom: 10px;
-    width: 100%; 
+    width: 90%; 
 }
 
 #xbox{
@@ -105,15 +114,14 @@ h1{
     display: flex;
     align-items: end;
     justify-self: flex-end;
-    width: 90%;
-    padding-bottom: 5px;
+    width: 80%;
+    padding: 25px;
 }
 #console{
-    width: 100%;
+    width: 65%;
     grid-area: 1/4/2/5;
     display: flex;
     justify-self: center;
     padding: 25px;
-    border-radius: 50%;
-    
+
 }
